# lang-select

./: LICENSE  MANIFEST.in  README.md  enhanced_extractor.py  enhanced_extractor_example.py  example_dojo_select.py  example_multi_select.py  example_usage.py  how-to-use.md  pyproject.toml  setup.py  test_enhanced_extractor.py  test_formatter.py
clients/: cmd_select.py  cmd_select_02.py  test_cmd_select.py
clients/usecase/: long_list.md  multi_intent.md
docs/: 01_ticket.md
examples/: display_styles.py  example_dojo_chat.py  example_overlay.py  example_usage.py  select.md
lang_select/: __init__.py  __main__.py  cli.py  enhanced_extractor.py  formatter.py  parser.py  selector.py  textual_overlay.py
lang_select.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
