[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-select"
version = "0.1.0"
description = "Tool to extract and select items from language model responses"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["llm", "gpt", "cli", "selection", "interactive"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
rich = ["rich>=12.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/lang-select"
"Bug Tracker" = "https://github.com/yourusername/lang-select/issues"
"Documentation" = "https://github.com/yourusername/lang-select#readme"
"Source Code" = "https://github.com/yourusername/lang-select"

[project.scripts]
lang-select = "lang_select.cli:main"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 