[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lang-select"
description = "Extract and select numbered or bulleted items from language model responses with hierarchical formatting and colorized output"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "cli", "language-model", "llm", "extraction", "selection", 
    "multi-selection", "enhanced-extraction", "hierarchy", "formatting",
    "colorized", "visualization", "terminal-ui"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
rich = ["rich>=12.0.0"]
textual = ["textual>=0.38.0"]
all = ["rich>=12.0.0", "textual>=0.38.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]

[project.urls]
"Homepage" = "https://github.com/xbarat/lang-select"
"Bug Tracker" = "https://github.com/xbarat/lang-select/issues"
"Documentation" = "https://github.com/xbarat/lang-select#readme"
"Source Code" = "https://github.com/xbarat/lang-select"

[project.scripts]
lang-select = "lang_select.cli:main"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.hatch.version]
path = "lang_select/__init__.py" 